--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ pillow
 pyrogram
 hachoir
 lyricsgenius
-py-tgcalls==0.8.5
+py-tgcalls
 wget
 python-dotenv
 youtube-search-python
@@ -21,3 +21,5 @@ yt-dlp==2021.11.10.1
 tgcrypto
 gitpython
 heroku3
+bs4 
+beautifulsoup4
