--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ wget
 python-dotenv
 youtube-search-python 
 youtube_search
-git+https://github.com/kucekmill/speedups
+speedtest 
 motor
 psutil
 requests
