--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ wget
 python-dotenv
 youtube-search-python 
 youtube_search
-speedtest-cli
+git+https://github.com/matalata02/srepet@master
 motor
 psutil
 requests
