--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: true
 contact_links:
-  - name: Yukki Support
-    url: https://t.me/YukkiSupport
+  - name: Meta Support
+    url: https://t.me/sadnesstalk 
     about: Direct chat on non-inquiries subjects.
   - name: Documentation
-    url: https://Yukki.tech/
+    url: https://github.com/matalata02
     about: Documentation for getting started with bot.
