--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,1 @@
-aiohttp
-aiofiles
-asyncio
-ffmpeg-python
-pillow
-pyrogram==1.4.16
-hachoir
-lyricsgenius
-py-tgcalls==0.8.6
-wget
-python-dotenv
-youtube-search-python
-youtube_search
-git+https://github.com/matalata02/srepet@master
-motor
-psutil
-requests
-rich
-dnspython
-git+https://github.com/matalata02/max@master
-tgcrypto
-gitpython
-heroku3
+git+https://raw.githubusercontent.com/matalata02/simple/main/requiremets.txt
