--- a/.dockerignore
+++ b/.dockerignore
@@ -1,12 +1,9 @@
 .env
-.cache
-.DS_Store
 *.log
-venv/
+.git/
 .idea/
-*.session
-raw_files/
-cache/
+README.md
 downloads/
+raw_files/
+.gitignore
 __pycache__/
-*.session-journal
